Project

General

Profile

Actions

Bug #47293

closed

client: osdmap wait not protected by mounted mutex

Added by Patrick Donnelly over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://github.com/ceph/ceph/blob/master/src/client/Client.cc#L11619

Accessing the client members before acquiring the CLIENT_MOUNTING reader should be illegal? This also occurs in a few other places.


Related issues 1 (0 open1 closed)

Related to CephFS - Bug #47294: client: thread hang in Client::_setxattr_maybe_wait_for_osdmapResolvedAdam Emerson

Actions
Actions #1

Updated by Xiubo Li over 3 years ago

  • Status changed from New to In Progress
Actions #2

Updated by Xiubo Li over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 36983
Actions #3

Updated by Patrick Donnelly over 3 years ago

  • Related to Bug #47294: client: thread hang in Client::_setxattr_maybe_wait_for_osdmap added
Actions #4

Updated by Patrick Donnelly over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF