client: make the osdmap wait under the mount_state reader check

It will make no sense to check this if the unmouting is already
going on.

https://tracker.ceph.com/issues/47293
Signed-off-by: Xiubo Li <xiubli@redhat.com>